<resources>
    <string name="app_name" translatable="false">ToDoApp</string>
    <string name="my_tasks">My tasks</string>
    <string name="info">Info</string>
    <string name="completed">Completed</string>
    <string name="new_task">New</string>
    <string name="show_or_hide">Show/Hide</string>
    <string name="add_task">Add</string>
    <string name="less_important_task">Low importance</string>
    <string name="save">Save</string>
    <string name="importance">Importance</string>
    <string name="make_up">Make up</string>
    <string name="what_should_be_done">What should be done…</string>
    <string name="important_sign" translatable="false">!!</string>
    <string name="important">Important</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_text">Invalid text</string>
    <string name="invalid_date">Invalid date</string>
    <string name="no">No</string>
    <string name="less">Less</string>
    <string name="remove">Remove</string>
    <string name="undo">Undo</string>
    <string name="removed_todo_item">Task removed</string>
    <string name="task_completed">Completed</string>
    <string name="last_edit">Last modified</string>
    <string name="edit">Edit</string>
    <string name="data_synchronized">Data synchronized</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="try_again_later">Try again later</string>
    <string name="loading">Loading</string>
    <string name="base_notifications">Base notifications</string>
    <string name="deadline_will_expire">Deadline will expire</string>
    <string name="allow_todo_app_to_send_you_notifications">Allow TodoApp to send you notifications?</string>
    <string name="allow">Allow</string>
    <string name="dont_allow">Don`t allow</string>
    <string name="notification">Notification</string>
    <string name="notifications_for_important_events">Notifications are needed to notify about important events</string>
    <string name="settings">Settings</string>
    <string name="separator">Separator</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
</resources>