<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/separator"
        android:layout_width="50dp"
        android:layout_height="6dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/separator_light"
        android:contentDescription="@string/separator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/theme"

        android:layout_marginVertical="10dp"

        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:background="?attr/unselectedRadioButtonBackground"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_theme">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/light_theme_radio_button"
            android:layout_height="wrap_content"
            android:text="@string/light"
            style="@style/RadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/system_theme_radio_button"
            android:layout_height="wrap_content"
            android:text="@string/system"
            style="@style/RadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/night_theme_radio_button"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            style="@style/RadioButton" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>