<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:paddingBottom="16dp"
    android:background="?attr/nav_bar_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_my_tasks"

        android:textSize="22sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:text="@string/my_tasks"

        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"

        android:layout_marginVertical="32dp"

        android:contentDescription="@string/cancel"

        android:layout_marginHorizontal="16dp"

        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_hide_in_nav_bar"
        android:layout_width="55dp"
        android:layout_height="45dp"

        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"

        android:layout_marginHorizontal="16dp"

        android:padding="10dp"


        android:layout_marginEnd="20dp"

        android:contentDescription="@string/show_or_hide"
        android:src="@drawable/ic_show"

        app:layout_constraintBottom_toBottomOf="@id/textView_my_tasks"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>