<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_background_window"
    android:fitsSystemWindows="true"
    tools:context=".presentation.features.TodoItemsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="?attr/color_background_window"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBarTitle"
            app:expandedTitleMarginBottom="52dp"
            app:expandedTitleMarginStart="62dp"
            app:expandedTitleTextAppearance="@style/TextViewHeader"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/my_tasks"
            app:titleCollapseMode="scale"
            app:toolbarId="@id/toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView_hide"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="6dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_show"
                app:iconTint="@color/primary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="62dp"
                android:layout_marginBottom="20dp"
                android:text="@string/completed"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayout_tasks"
                style="@style/TasksBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    tools:itemCount="0"

                    tools:listitem="@layout/task_unimportant" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_add_new_task"
                    style="@style/Widget.textViewSubhead"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:layout_marginStart="50dp"

                    android:background="?attr/selectableItemBackground"
                    android:paddingHorizontal="10dp"

                    android:paddingVertical="4dp"

                    android:text="@string/new_task" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButton_add_new_task"
        style="@style/Widget.floatingActionButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="40dp"
        android:contentDescription="@string/add_task"

        app:srcCompat="@drawable/ic_add"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>